fix wrapping issue

--- a/public/assets/css/style.less
+++ b/public/assets/css/style.less
@@ -180,7 +180,7 @@ header {
 
   .navbar .navbar-brand {
     font-family: Nanami-Rounded-Lt;
-    min-width: 13em;
+    min-width: 14em;
     padding-top: 15px;
 
     p {
